# gh-automerge

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  gh-arm
.github/workflows/: release.yaml
nix/: flake.nix
script/: build.sh
src/: main.rs
