[package]
name = "gh-automerge"
version = "1.0.0"
edition = "2024"
authors = ["Eric Crosson <eric.s.crosson@utexas.edu>"]
license = "MIT OR Apache-2.0"
description = "GitHub CLI extension to enable auto-merge on a PR"
readme = "README.md"
repository = "https://github.com/EricCrosson/gh-automerge"
keywords = ["cli", "git", "gh", "pull-request"]
categories = ["command-line-utilities"]
exclude = [
  "/.envrc",
  "/.github",
  "/.gitignore",
  "/CHANGELOG.md",
  "/flake.{lock,nix}"
]

[profile.release]
lto = true
codegen-units = 1
strip = true
